semantic and nonsemantic elements

--- a/abesec.html
+++ b/abesec.html
@@ -67,14 +67,13 @@
 
 </ol>
 <nav>
-    <a=href="#" home</a> &nbsp; &nbsp; &nbsp; &nbsp;
-    <a=href="#" about</a> &nbsp; &nbsp;&nbsp;
-    <a=href="#" services</a> &nbsp; &nbsp;&nbsp;&nbsp;
-    <a=href="#" contact</a> &nbsp;&nbsp; &nbsp;&nbsp;
-    <a=href="#" blog</a>  &nbsp;&nbsp;
+    <a=href="#" >home</a> &nbsp; &nbsp; &nbsp; &nbsp;
+    <a=href="#" >about</a> &nbsp; &nbsp;&nbsp;
+    <a=href="#" >services</a> &nbsp; &nbsp;&nbsp;&nbsp;
+    <a=href="#" >contact</a> &nbsp;&nbsp; &nbsp;&nbsp;
+    <a=href="#" >blog</a>  &nbsp;&nbsp;
 </nav>
 <h1> welcome to naviagation bar</h1>
-
 
 
 </body>
