--- a/semantic and nonsemnatic.html
+++ b/semantic and nonsemnatic.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>semantic and non semantic</title>
+    <title> WEB ASSIGNMENT-semantic and non semantic elements</title>
 </head>
 <body>
-     
+    <!-- article and footer are semantic elements  -->
+    <!-- div and span are non semantic elements -->
+<article>
+    <h1>This is a semantic element</h1>
+    <p>article is a semantic element</p></article>
+    <footer>
+        <p> &copy; displays copyright symbol</p>
+       <p>This is footer semantic element</p> </footer>
+<div class= "post"> 
+    <h1>Blogs content title</h1>
+    <h2>This is a non semantic element</h2>
+
+    <p>div content displays here</p>
+</div>
+<div>
+ <p> This is a <span class="highlight "> highlighted .This is a non semantic element</span>
+    <br>
+    span content displays here</p>
+</div>
+
+
+
 </body>
 </html>
