--- a/table.html
+++ b/table.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,16 +36,19 @@
     </tr>
     <tr>
         <td> Vanshika</td>
+        <td> Dimple</td>
         <td> Maths</td>
         <td> 95</td>
     </tr>
     <tr>
         <td> Riya</td>
+        <td> Varnika</td>
         <td> Science</td>
         <td> 90</td>
     </tr>
     <tr>
         <td> Anjali</td>
+        <td>Aditi</td>
         <td> English</td>
         <td> 85</td>
     </tr>
@@ -88,3 +93,5 @@
 
 </body>
 </html>
+
+
