--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,8 @@
     <title>resume</title>
     <style>
         h1{
-            color:  blue;;
+            color:  blue;
         }
-        #tabh{
-            color: white;
-        }
-  
     </style>
 </head>
 <body>
